--- a/src/Components/Category/Category.module.css
+++ b/src/Components/Category/Category.module.css
@@ -1,89 +1,50 @@
-/* .category {
-    height: 250px;
+
+/* This is the new css file */
+.category {
+    height: 300px;
     width: 250px;
-    box-sizing: border-box;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    overflow: hidden;           
+    display: flex;
 }
 
 .category img {
-    width: 100%;
-    max-height: 250px;
-    object-fit: contain;
+    width: 90%;
+    max-height: 180px;              
+    object-fit: contain;       
     padding: 0 10px;
 }
 
 .category a {
     text-decoration: none;
     color: rgb(35, 35, 35);
+    opacity: 0.9;
 }
-
+.category h2{
+    font-size: 22px;
+}
 .category h2,
 .category p {
-    padding: 5px;
+    padding: 5px ;
     margin-left: 15px;
 }
 
 .category p {
-    font-size: 12px;
+    font-size: 15px;
     font-weight: bold;
     color: rgb(9, 132, 209);
 }
 
 .category_container {
     position: relative;
-    margin-top: -10px;
+    margin-top: -50px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    place-items: center;
-} */
-
-
-/* This is the new css file */
-.category {
-    width: 100%;
-    max-width: 250px;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    overflow: hidden;           
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.category img {
-    width: 100%;
-    height: 180px;              
-    object-fit: contain;       
-    padding: 10px;
-    background: #fff;
-}
-
-.category a {
-    text-decoration: none;
-    color: rgb(35, 35, 35);
-}
-
-.category h2,
-.category p {
-    padding: 5px 10px;
-    margin: 0;
-}
-
-.category p {
-    font-size: 12px;
-    font-weight: bold;
-    color: rgb(9, 132, 209);
-}
-
-.category_container {
-    width: 100%;
-    margin-top: -20px;
-    display: grid;
-    font-size: 13px;
-    gap: 10px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    padding: 20px;
+    max-width: 1600px;
+    gap: 30px;
+    margin-left: auto;
+    margin-right: auto;
     place-items: center;
 }
