--- a/src/Components/Product/Product.module.css
+++ b/src/Components/Product/Product.module.css
@@ -4,13 +4,13 @@
   font-family: sans-serif;
 } */
 
-:root {
-  --primary-color: #febd69;
-  --primary-shade: hsl(34, 80%, 51%);
+:root{
+    --primary-color: #fcbd69;
+    --primary-shade: #d29644;
 }
 .products_container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   max-width: 1450px;
   margin: 100px auto 100px auto;
   gap: 50px;
@@ -20,7 +20,7 @@
     margin: 0 auto;
 }
 .card_container {
-  width: 250px;
+  width: 200px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding: 10px;
   color: black;
@@ -30,7 +30,7 @@
 .card_container img {
   padding: 10px;
   width: 100%;
-  height: 100%;
+  height: 200px;
   object-fit: contain;
 }
 .button {
@@ -68,7 +68,7 @@
   height: auto;
   display: flex;
   gap: 50px;
-  width: 100%;
+  width: 100% ;
 }
 .product_flexed h3{
   padding: 20px 0px;
@@ -92,4 +92,5 @@
     display: flex;
     flex-direction: column;
   }
+
 }
